mudei umas coisa

--- a/flower.html
+++ b/flower.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>flowers</title>
+    <title>Flores</title>
 </head>
 <body class="container">
-    <div class="night"></div>
+    <div class="night">
+    </div>
     <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
@@ -17,7 +18,8 @@
           <div class="flower__leaf flower__leaf--2"></div>
           <div class="flower__leaf flower__leaf--3"></div>
           <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__white-circle"></div>
+          <div class="flower__white-circle">
+          </div>
   
           <div class="flower__light flower__light--1"></div>
           <div class="flower__light flower__light--2"></div>
@@ -307,6 +309,6 @@
       </div>
     </div>
     
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
