--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <title>Para Emy</title>
 </head>
 <body>
-    <h1>Bem-vindo ao nosso site</h1>
-    
-    <img src="IMG-20231015-WA0022.jpg" alt="fotinha">
-
-    aqui eu queria só demonstrar um pouco do q sinto por vc, deu um pouco de trabalho p fazer só q espero q vc  goste meu amor
-    
-    <a href="./flor.html"><button>Ir para a aba legal</button></a>
+    <h1>Oiii meu amor</h1>
+    <h2>Fiz esse sitezin para vc lembrar do tanto que eu lhe amo e para te pedir em namoro dnv</h2><p></p>
+    <h2>Como eu ja sei q vc me quer eu nem vou botar os botão de "sim" ou "não"</h2>
+    <p><img src="IMG-20231015-WA0022.jpg" alt="fotinha" width="200"> </p>
+    <h2>Queria que vc soubesse que vc é muito impotante p mim meu amor, e que eu gosto innfinitamente de vc, quero estar ao seu lado até o finalzin da minha vida</h2>
+    <p></p>
+    <h2>Antes de vc entrar aqui, lembre sempre desse site quando achar q eu vou desistir de vc, pq se eu não desisti de fzr esse site, eu não vou desistir de vc tbm nn</h2>
+    <p></p>
+    <a href="./flower.html"><button>Flores</button></a>
 </body>
 </html>
